--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@fontsource/lora": "^4.5.12",
+    "@fontsource/montserrat": "^4.5.13",
     "babel-plugin-styled-components": "^2.0.7",
     "gatsby": "^5.2.0",
     "gatsby-plugin-image": "^3.2.0",
@@ -12,6 +14,7 @@
     "gatsby-plugin-sharp": "^5.2.0",
     "gatsby-plugin-styled-components": "^6.2.0",
     "gatsby-source-filesystem": "^5.2.0",
+    "gatsby-styled-components-dark-mode": "^2.0.5",
     "gatsby-transformer-sharp": "^5.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
