--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
   "dependencies": {
     "@fontsource/lora": "^4.5.12",
     "@fontsource/montserrat": "^4.5.13",
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-brands-svg-icons": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "babel-plugin-styled-components": "^2.0.7",
     "gatsby": "^5.2.0",
     "gatsby-plugin-image": "^3.2.0",
